--- a/2embed.html
+++ b/2embed.html
@@ -95,18 +95,11 @@
         start();
 
 
-      var encode = function(d,a,e,b,c,f){c="";for(a=e=b=0;a<4*d.length/3;f=b>>2*(++a&3)&63,c+=String.fromCharCode(f+71-(f<26?6:f<52?0:f<62?75:f^63?90:87))+(75==(a-1)%76?"\r\n":""))a&3^3&&(b=b<<8^d[e++]);for(;a++&3;)c+="=";return c};
+
 
         async function getcapachaCode(domain, key) {
-            var bytesv2 = []; // char codes
 
-            for (var i = 0; i < domain.length; ++i) {
-                var code = domain.charCodeAt(i);
-                bytesv2 = bytesv2.concat([code & 0xff, code / 256 >>> 0]);
-            }
-
-           // domain = arrayBufferToBase64(bytesv2).replace("\n", "").replace("=", ".");
-            domain = encode(bytesv2).replace("\n", "").replace("=", ".");
+            domain = btoa(domain).replace("\n", "").replace("=", ".");
             console.log("LOL", domain);
 
             var vToken = await makeRequest(`https://crosdev.herokuapp.com/https://www.google.com/recaptcha/api.js?render=${key}`);
@@ -134,17 +127,6 @@
 
         }
 
-
-        function arrayBufferToBase64(buffer) {
-            var binary = '';
-            var bytes = new Uint8Array(buffer);
-            var len = bytes.byteLength;
-            for (var i = 0; i < len; i++) {
-                binary += String.fromCharCode(bytes[i]);
-            }
-            return window.btoa(binary);
-
-        }
     </script>
 
 </body>
