--- a/2embed.html
+++ b/2embed.html
@@ -102,7 +102,7 @@
             domain = btoa(domain).replace("\n", "").replace("=", ".");
             console.log("LOL", domain);
 
-            var vToken = await makeRequest(`https://crosdev.herokuapp.com/https://www.google.com/recaptcha/api.js?render=${key}`);
+            var vToken = await makeRequest("GET",`https://crosdev.herokuapp.com/https://www.google.com/recaptcha/api.js?render=${key}`);
             vToken = vToken.responseText;
 
             vToken = vToken.substring(vToken.indexOf('releases/') + 1);
@@ -111,7 +111,7 @@
 
             console.log(vToken);
 
-            var recapToken = await makeRequest(`https://crosdev.herokuapp.com/https://www.google.com/recaptcha/api2/anchor?ar=1&hl=en&size=invisible&cb=cs3&k=${key}&co=${domain}&v=${vToken}`)
+            var recapToken = await makeRequest("GET",`https://crosdev.herokuapp.com/https://www.google.com/recaptcha/api2/anchor?ar=1&hl=en&size=invisible&cb=cs3&k=${key}&co=${domain}&v=${vToken}`)
             const parser = new DOMParser();
             var doc = parser.parseFromString(recapToken.responseText, "text/html");
             recapToken= doc.querySelector("#recaptcha-token").value;
