--- a/2embed.html
+++ b/2embed.html
@@ -122,7 +122,7 @@
             var map = {
  ​                    ​"​v​"​:vToken, 
  ​                    ​"​k​"​:key, 
- ​                    ​"​c​"":recapToken, 
+ ​                    ​"​c​":recapToken, 
  ​                    ​"​co​"​:domain, 
  ​                    ​"​sa​"​:​"​"​, 
  ​                    ​"​reason​"​:"​q​"
