--- a/2embed.html
+++ b/2embed.html
@@ -120,12 +120,12 @@
 
 
             var map = {
- ​                    ​"​v​"​:vToken, 
- ​                    ​"​k​"​:key, 
- ​                    ​"​c​":recapToken, 
- ​                    ​"​co​"​:domain, 
- ​                    ​"​sa​"​:​"​"​, 
- ​                    ​"​reason​"​:"​q​"
+ ​                    ​​v:vToken, 
+ ​                    k:key, 
+ ​                    c:recapToken, 
+ ​                    co:domain, 
+ ​                    sa​:​"​"​, 
+ ​                    reason​:"​q​"
             };
             console.log(JSON.stringify(map),'paramd');
 
