--- a/2embed.html
+++ b/2embed.html
@@ -117,8 +117,9 @@
             recapToken= doc.querySelector("#recaptcha-token").value;
 
             console.log(recapToken,'recap');
+             
 
-            var map = { ​​v:vToken, k:key, c:recapToken, co:domain, sa​:​"​"​, reason​:"​q​" };
+            var map = {v:vToken, k:key, c:recapToken,co:domain,sa:"",reason:"q"};
 
             console.log(JSON.stringify(map),'paramd');
 
