--- a/2embed.html
+++ b/2embed.html
@@ -114,7 +114,7 @@
                     
                             if(obj.link.includes("streamlare"){
                                var s = obj.link.split('/');
-                                obj.link = s[s.length - 1];
+                                obj.link = "https://ninjastream.lolhoinc.repl.co/streamlare/" +  s[s.length - 1];
                                   
                                }
 
