--- a/2embed.html
+++ b/2embed.html
@@ -28,7 +28,7 @@
 
 
     <!-- Start your project here-->
-    <div class="container row  w-auto btn-group" role="group" id="mainContent" style="margin: 10px;margin-top: 30px;">
+    <div class="btn-group" role="group" id="mainContent" style="margin: 10px;margin-top: 30px;">
 
     </div>
     <!-- End your project here-->
