--- a/1337x.html
+++ b/1337x.html
@@ -90,7 +90,7 @@
     
     function doSearch() {
 
-      if (document.getElementById('form1').value) {
+      if (url) {
 
         document.getElementById('mainContent').innerHTML = ``;
 
