--- a/1337x.html
+++ b/1337x.html
@@ -149,7 +149,7 @@
               }
               }
               catch(e){
-              console.log(e,element)
+              console.log(e)
               }
             }
 
