--- a/1337x.html
+++ b/1337x.html
@@ -119,7 +119,7 @@
               
               const parser = new DOMParser();
               var post = parser.parseFromString(a[c].innerHTML, "text/html");
-
+console.log(a[c].innerHTML);
 
 
               var name = post.getElementsByTagName('a')[1].innerText;
