--- a/1337x.html
+++ b/1337x.html
@@ -125,7 +125,7 @@ var res= '';
 
               var name = post.getElementsByTagName('a')[1].innerText;
               var href = post.getElementsByTagName('a')[1].href;
-              var seeds = post.querySelector('td.seeds').innerText;
+              var seeds = post.querySelector('span.seeds').innerText;
               var datae = post.querySelector('td.coll-date').innerText;
               var uploader = post.querySelector('td.uploader').innerText;              
               var size = post.querySelector('td.size').innerText;
