--- a/1337x.html
+++ b/1337x.html
@@ -114,13 +114,14 @@
           var tr = doc.getElementsByTagName("tr");
 
           var a = doc.getElementsByTagName("a");
+
       for (c = 0; c < tr.length; c++) {
                           
               const parser = new DOMParser();
               var post = parser.parseFromString(tr[c].innerHTML, "text/html");
               console.log(tr[c].innerHTML);
 
-             var href = post.getElementsByTagName('a')[1].href;
+             var href = post.querySelector('td.coll-1.name > a:nth-child(2)').href;
 tr[c].innerHTML = `<div class="ty" onclick="loadEpisodes('${href}')">${tr[c].innerHTML}</div>`;
 
     }
