--- a/1337x.html
+++ b/1337x.html
@@ -124,7 +124,7 @@
              var href = post.querySelector('td.coll-1.name > a:nth-child(2)').href;
 tr[c].innerHTML = `<div class="ty" onclick="loadEpisodes('${href}')">${tr[c].innerHTML}</div>`;
 }catch(e){
-console log(e);
+console.log(e);
 }
 
     }
