--- a/1337x.html
+++ b/1337x.html
@@ -114,7 +114,7 @@
             obj.forEach(element => {
               try{
               var html = element.innerHTML;
-var snip = element.innerText.split("\n");
+var snip = element.text.split("\n");
 console.log(JSON.stringify(snip));
               const parser = new DOMParser();
               var post = parser.parseFromString(html, "text/html");
