--- a/1337x.html
+++ b/1337x.html
@@ -122,7 +122,7 @@ console.log(JSON.stringify(snip));
               var name = snip[1];
               var href = post.getElementsByTagName('a')[1].href;
               var seeds = snip[2];
-              var ssiss = snip[5].substring(0,snip[5].index of('B'));
+              var ssiss = snip[5].substring(0,snip[5].indexOf('B'));
               var size = parseFloat(ssiss);
               var GB = ssiss.includes('GB') ? true : false;
               var uploader = snip[6];
