--- a/1337x.html
+++ b/1337x.html
@@ -129,14 +129,14 @@ console.log(JSON.stringify(snip));
               var datae = snip[4];              
               
               
-              if(!GB || (GB && size <=  4)){
+              if(!GB || (GB && size <= 4.0)){
 
               res = res + `
 <div class="col-lg-3 col-md-6 col-sm-12 ">
 <div class="card">
 <div class="card-body">
 <h5 class="card-title">${name}</h5>
- <p class="card-text">Size:${size}, Seeds:${seeds}, Date:${datae}, Uploader:${uploader}.</p>
+ <p class="card-text">Size:${ssiss}, Seeds:${seeds}, Date:${datae}, Uploader:${uploader}.</p>
 <button class="btn btn-primary" onclick="loadEpisodes('${href}')">OPEN</button>
 </div>
 </div>
