--- a/1337x.html
+++ b/1337x.html
@@ -202,6 +202,7 @@ doSearch();
           for (c = 0; c < a.length; c++) {
             a[c].style.maxWidth = "100%";
             a[c].style.height = "auto";
+           a[c].src  = "https://home.techiebank.workers.dev/http/" +a[c].src;
           }
           
                     var res = `
