--- a/1337x.html
+++ b/1337x.html
@@ -205,11 +205,19 @@ doSearch();
            a[c].src  = "https://home.techiebank.workers.dev/http/" +a[c].src;
           }
           
-                    var res = `
-                    <a class="btn btn-primary" href="https://thawning.tanishagoyal.repl.co/seedr/stream?hash=558fa765f980b01f1c2e5e4ae37bfe3502ba33c1ec90cc5bb659dbb250bc6c813bde363a2055bf1ae8d9e0dd101d166fpu3d5hWgFdAHXzF0EumwUE1moKtyN8mjzesi2ym2mbwf4YGUAU3mX5CnWgu42pPwZCfQKQK9GDpAl%2BKm3XbW1A%3D%3D&link=${encodeURIComponent(magnet)}" target="_blank">Direct Stream</a>
-                    <a class="btn btn-primary" href="${magnet}">Magnet link</a>
-                    ${details}
-          `;
+                   var res = `
+                    <a class="btn btn-primary" href="https://seedr.torrentdev.workers.dev/addMagnet?magnet=${encodeURIComponent(magnet)}" target="_blank">Direct Stream</a>
+                   <a class="btn btn-primary" href="${magnet}">Magnet link</a>
+               ${details}
+         `;
+
+
+           //var res = `
+          //          <a class="btn btn-primary" href="https://thawning.tanishagoyal.repl.co/seedr/stream?hash=558fa765f980b01f1c2e5e4ae37bfe3502ba33c1ec90cc5bb659dbb250bc6c813bde363a2055bf1ae8d9e0dd101d166fpu3d5hWgFdAHXzF0EumwUE1moKtyN8mjzesi2ym2mbwf4YGUAU3mX5CnWgu42pPwZCfQKQK9GDpAl%2BKm3XbW1A%3D%3D&link=${encodeURIComponent(magnet)}" target="_blank">Direct Stream</a>
+         //           <a class="btn btn-primary" href="${magnet}">Magnet link</a>
+        //         ${details}
+       //  `;
+
           
 
           document.getElementById('mainContent').innerHTML = res;
