--- a/whatsapp.html
+++ b/whatsapp.html
@@ -30,7 +30,7 @@
 
   <!-- Start your project here-->
   <div class="container row  w-auto" id="mainContent" style="margin: 10px;margin-top: 30px;">
-  <img id="qrxode" >
+  <img id="qrxcode" >
   </div>
   <!-- End your project here-->
 
