--- a/whatsapp.html
+++ b/whatsapp.html
@@ -220,7 +220,9 @@ function loadDoc() {
       document.getElementById("qrxcode").src = res.data.qr;
     }
   };
-  xhttp.open("POST", "https://wapp.gololhk.repl.co/sessions/add", true);
+  //xhttp.open("POST", "https://wapp.gololhk.repl.co/sessions/add", true);
+xhttp.open("POST", "https://baileys-api-whatsapp-production.up.railway.app/sessions/add", true);
+
   xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
   xhttp.send("id=baji&isLegacy=false");
 }
