--- a/whatsapp.html
+++ b/whatsapp.html
@@ -195,7 +195,7 @@
               receiver: document.getElementById("sendTo").value,
               message: {
                 document: {
-                  url: document.getElementById("PDF")
+                  url: document.getElementById("PDF").value
                 },
                 mimetype: 'application/pdf',
                 fileName: 'PDFFILE.pdf',
