--- a/whatsapp.html
+++ b/whatsapp.html
@@ -198,8 +198,7 @@
                   url: document.getElementById("PDF").value
                 },
                 mimetype: 'application/pdf',
-                fileName: 'PDFFILE.pdf',
-                text: document.getElementById("msgData").value
+                fileName: 'PDFFILE.pdf'
               }
             }];
         }
