--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
 
 
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.5.1/socket.io.js" ></script>  
 
   <!-- MDB -->
   <script type="text/javascript" src="https://vegamovies.pages.dev/js/mdb.min.js"></script>
@@ -340,6 +341,9 @@
     }
 
 
+        var socket = io();
+
+    
     function loadURL(uri) {
 
       makeRequest("GET", `https://scrap.torrentdev.workers.dev/?url=${encodeURIComponent(uri)}&selector=body`).then(response => {
